Fixed Overflow Issue

--- a/BG/bg2.css
+++ b/BG/bg2.css
@@ -6,14 +6,14 @@ body{
 }
 
 .leaf{
-    position:absolute;
+    position:fixed;
     width:100%;
     height:100%;
     top:0;
     left:0;
 }
 .leaf img{
-    position:absolute;
+    position:fixed;
     display:block;
     z-index: -1;
 }
